--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Drawing App with Eraser and Shapes</title>
+  <title>Drawing App with Eraser, Shapes, and Touch Support</title>
   <style>
     body {
       text-align: center;
       margin: 0;
       font-family: sans-serif;
       background: #f0f0f0;
+      -webkit-user-select: none; /* Disable text selection on mobile */
+      -ms-user-select: none;
+      user-select: none;
     }
     #toolbar {
       margin: 10px;
@@ -18,6 +21,7 @@
       border: 1px solid #000;
       background: #fff;
       cursor: crosshair;
+      touch-action: none; /* Prevent default gestures on touch devices */
     }
     button {
       margin-left: 5px;
@@ -70,10 +74,62 @@
     let startX = 0;
     let startY = 0;
 
-    canvas.addEventListener('mousedown', startDrawing);
-    canvas.addEventListener('mouseup', stopDrawing);
-    canvas.addEventListener('mouseout', stopDrawing);
-    canvas.addEventListener('mousemove', draw);
+    // Helper to get coordinates relative to canvas for mouse or touch
+    function getPointerPos(e) {
+      let rect = canvas.getBoundingClientRect();
+      if (e.touches && e.touches.length > 0) {
+        return {
+          x: e.touches[0].clientX - rect.left,
+          y: e.touches[0].clientY - rect.top
+        };
+      } else {
+        return {
+          x: e.offsetX,
+          y: e.offsetY
+        };
+      }
+    }
+
+    // Mouse events
+    canvas.addEventListener('mousedown', e => {
+      const pos = getPointerPos(e);
+      startDrawing(pos.x, pos.y);
+      e.preventDefault();
+    });
+    canvas.addEventListener('mousemove', e => {
+      const pos = getPointerPos(e);
+      draw(pos.x, pos.y);
+      e.preventDefault();
+    });
+    canvas.addEventListener('mouseup', e => {
+      const pos = getPointerPos(e);
+      stopDrawing(pos.x, pos.y);
+      e.preventDefault();
+    });
+    canvas.addEventListener('mouseout', e => {
+      stopDrawing();
+      e.preventDefault();
+    });
+
+    // Touch events
+    canvas.addEventListener('touchstart', e => {
+      const pos = getPointerPos(e);
+      startDrawing(pos.x, pos.y);
+      e.preventDefault();
+    }, { passive: false });
+    canvas.addEventListener('touchmove', e => {
+      const pos = getPointerPos(e);
+      draw(pos.x, pos.y);
+      e.preventDefault();
+    }, { passive: false });
+    canvas.addEventListener('touchend', e => {
+      stopDrawing();
+      e.preventDefault();
+    }, { passive: false });
+    canvas.addEventListener('touchcancel', e => {
+      stopDrawing();
+      e.preventDefault();
+    }, { passive: false });
 
     document.getElementById('colorPicker').addEventListener('input', (e) => {
       color = e.target.value;
@@ -102,61 +158,66 @@
       canvas.style.cursor = cursorStyle;
     }
 
-    function startDrawing(e) {
+    function startDrawing(x, y) {
       isDrawing = true;
-      startX = e.offsetX;
-      startY = e.offsetY;
+      startX = x;
+      startY = y;
 
       if (mode === 'draw' || mode === 'eraser') {
-        draw(e);
+        beginPathAt(x, y);
       } else if (mode === 'rect' || mode === 'circle') {
-        // Save canvas state so we can restore on each mousemove for preview
         savedImageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
       }
     }
 
-    function stopDrawing(e) {
+    function stopDrawing(x, y) {
       if (!isDrawing) return;
       isDrawing = false;
 
       if (mode === 'rect') {
-        drawRectangle(startX, startY, e.offsetX, e.offsetY, true);
+        drawRectangle(startX, startY, x, y, true);
       } else if (mode === 'circle') {
-        drawCircle(startX, startY, e.offsetX, e.offsetY, true);
+        drawCircle(startX, startY, x, y, true);
       }
 
       ctx.beginPath();
     }
 
-    function draw(e) {
+    function draw(x, y) {
       if (!isDrawing) return;
 
       if (mode === 'draw' || mode === 'eraser') {
-        ctx.lineWidth = brushSize;
-        ctx.lineCap = 'round';
-
-        if (mode === 'draw') {
-          ctx.strokeStyle = color;
-          ctx.globalCompositeOperation = 'source-over';
-        } else if (mode === 'eraser') {
-          ctx.globalCompositeOperation = 'destination-out';
-          ctx.strokeStyle = 'rgba(0,0,0,1)';
-        }
-
-        ctx.lineTo(e.offsetX, e.offsetY);
-        ctx.stroke();
-        ctx.beginPath();
-        ctx.moveTo(e.offsetX, e.offsetY);
-
+        drawLineTo(x, y);
       } else if (mode === 'rect') {
-        // Restore saved canvas state
         ctx.putImageData(savedImageData, 0, 0);
-        drawRectangle(startX, startY, e.offsetX, e.offsetY, false);
-
+        drawRectangle(startX, startY, x, y, false);
       } else if (mode === 'circle') {
         ctx.putImageData(savedImageData, 0, 0);
-        drawCircle(startX, startY, e.offsetX, e.offsetY, false);
+        drawCircle(startX, startY, x, y, false);
       }
+    }
+
+    function beginPathAt(x, y) {
+      ctx.beginPath();
+      ctx.moveTo(x, y);
+    }
+
+    function drawLineTo(x, y) {
+      ctx.lineWidth = brushSize;
+      ctx.lineCap = 'round';
+
+      if (mode === 'draw') {
+        ctx.strokeStyle = color;
+        ctx.globalCompositeOperation = 'source-over';
+      } else if (mode === 'eraser') {
+        ctx.globalCompositeOperation = 'destination-out';
+        ctx.strokeStyle = 'rgba(0,0,0,1)';
+      }
+
+      ctx.lineTo(x, y);
+      ctx.stroke();
+      ctx.beginPath();
+      ctx.moveTo(x, y);
     }
 
     function drawRectangle(x1, y1, x2, y2, finalize) {
